--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body{
 .header {
     color: white;
     background-color: #1F2937;
-    padding: 20px 200px;
+    padding: 20px 300px;
     display: flex;
     flex-direction: column;
     border: white 1px;
@@ -20,6 +20,7 @@ body{
 .nav-bar {
     display: flex;
     justify-content: space-between;
+    padding-bottom: 100px;
 }
 
 .links {
@@ -39,7 +40,44 @@ a:link {
     text-decoration: none;
 }
 
-.header-logo {
-    font-size: x-large;
+.logo {
+    font-size: 24px;
     font-weight: bold;
+}
+
+.header-content {
+    display: flex;
+    justify-content: space-between;
+}
+
+.hero-main-text {
+    color: #f9faf8;
+    font-size: 48px;
+    font-weight: bolder;
+}
+.hero-secondary-text {
+    color: #e5e7eb;
+    font-size: 18px;
+
+}
+
+.texts{
+    width: 480px;
+}
+.place-holder {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: gray;
+    width: 520px;
+    height: 300px;
+}
+.butt {
+    color: white;
+    font-size: 20px;
+    background-color: #3882f6;
+    padding: 4px 25px;
+    border: none;
+    outline: none;
+    border-radius: 6px;
 }
