--- a/styles.css
+++ b/styles.css
@@ -1,101 +1,121 @@
-body{
-    font-family: 'Inter', Roboto ;
-}
-
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Inter', Roboto ;
 }
 
-.header {
-    color: white;
-    background-color: #1F2937;
-    padding: 20px 0px;
-    /* padding: 20px 300px; */
-    /* display: flex;
-    flex-direction: column; */
+a:link {
+  text-decoration: none;
 }
 
-.container {
-
-    /* width: 80%; */
-    /* max-width: 1200px; */
-    /* margin: 0 auto; */
-    /* padding: 0 15px; */
-}
-.nav-bar {
-    display: flex;
-    justify-content: space-between;
+/* Navbar Section */
+.navbar-container {
+  color: white;
+  display: flex;
+  justify-content: center;
+  background-color: #1F2937;
+  padding: 15px 0px;
 }
 
+.navbar-contents {
+  width: 900px;
+  display: flex;
+  justify-content: space-between;
+}
 .links {
-    width: 500px;
-    display: flex;
-    justify-content: space-between
+  font-size: 18px;
+  width: 400px;
+  display: flex;
+  justify-content: space-between;
 }
-
 .link-one,
 .link-two,
 .link-three {
     color: white
 }
 
-a:link {
-    text-decoration: none;
-}
-
 .logo {
-    font-size: 24px;
-    font-weight: bold;
+  color: #f9faf8;
+  font-size: 24px;
+  font-weight: bold;
 }
 
-.header-content {
-    display: flex;
-    justify-content: space-between;
+/* hero section */
+
+.hero-container {
+  /* border: 1px solid #fff;  */
+  display: flex;
+  justify-content: center;
+  color: white;
+  background-color: #1F2937;
+  padding: 50px 0px;
+}
+.hero-contents {
+  width: 900px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.hero-left-side {
+  width: 400px;
 }
 
-.hero {
-    padding: 100px 0;
-    background-color: #1F2937;
-}
 .hero-main-text {
-    color: #f9faf8;
-    font-size: 48px;
-    font-weight: bolder;
+  color: #f9faf8;
+  font-size: 48px;
+  font-weight: bolder;
 }
 .hero-secondary-text {
-    color: #e5e7eb;
-    font-size: 18px;
-    padding: 15px 0px;
-
+  font-size: 18px;
+  padding: 15px 0px;
 }
 
-.texts{
-    width: 480px;
-}
-.place-holder {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: gray;
-    width: 520px;
-    height: 240px;
-}
 .butt {
-    color: white;
-    font-size: 20px;
-    background-color: #3882f6;
-    padding: 4px 26px;
-    border: none;
-    outline: none;
-    border-radius: 6px;
+  color: white;
+  font-size: 20px;
+  background-color: #3882f6;
+  padding: 4px 26px;
+  border: none;
+  outline: none;
+  border-radius: 6px;
 }
 
-/* Some Random Information Section */
-.random-info {
-    background-color: white;
-    color: black;
-    text-align: center;
-    padding: 50px 0;
+.hero-img-placeholder {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: gray;
+  width: 400px;
+  height: 200px;
+}
+
+/* random info section */
+.random-title {
+  color: #1f2937;
+  padding: 35px 0px;
+  display: flex;
+  justify-content: center;
+  font-size: 36px;
+  font-weight: bolder;
+}
+
+.info-container {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  gap: 55px;
+}
+.info-content {
+  max-width: 200px;
+}
+
+.info-placeholder {
+  border: 4px solid #3882f6;
+  border-radius: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 200px;
+  height: 200px;
 }
